--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,13 +271,13 @@
     "    num_interactions = 0\n",
     "    while num_interactions < 100:\n",
     "        # Randomly select a person from self.population\n",
-    "        random_person = self.population\n",
+    "        random_person = np.random.choice(self.population)\n",
     "        # This only counts as an interaction if the random person selected is alive.  If the person is dead, do nothing, \n",
     "        # and the counter doesn't increment, repeating the loop and selecting a new person at random.\n",
     "        # check if the person is alive.\n",
     "        if random_person.is_alive:\n",
     "            # CASE: Random person is not vaccinated, and has not been infected before, making them vulnerable to infection\n",
-    "            if random_person.is_vaccinated == False and has_been_infected == False:\n",
+    "            if random_person.is_vaccinated == False and random_person.has_been_infected == False:\n",
     "                # Generate a random number between 0 and 1\n",
     "                random_number = np.random.random()\n",
     "                # If random_number is greater than or equal to (1 - self.r0), set random person as newly_infected\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +551,8 @@
       "R0: 2.0\n",
       "Mortality Rate: 50.0%\n",
       "Total Population Size: 2000\n",
-      "Total Number of Vaccinated People: 1643\n",
-      "Total Number of Immune: 1643\n",
+      "Total Number of Vaccinated People: 1675\n",
+      "Total Number of Immune: 1675\n",
       "Current Infected: 50\n",
       "Deaths So Far: 0\n"
      ]
@@ -564,13 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad0f2757011b4f8db2b14037383d8a2e",
+       "model_id": "28f3c0475de941778cd08a8c8452c501",
        "version_major": 2,
        "version_minor": 0
       },
@@ -586,21 +586,26 @@
      "output_type": "stream",
      "text": [
       "Beginning Time Step 0\n",
+      "Beginning Time Step 1\n",
+      "Beginning Time Step 2\n",
+      "Beginning Time Step 3\n",
+      "Beginning Time Step 4\n",
+      "Beginning Time Step 5\n",
+      "Beginning Time Step 6\n",
+      "Beginning Time Step 7\n",
+      "Beginning Time Step 8\n",
+      "Beginning Time Step 9\n",
+      "Beginning Time Step 10\n",
+      "Beginning Time Step 11\n",
+      "Beginning Time Step 12\n",
+      "Beginning Time Step 13\n",
+      "Beginning Time Step 14\n",
+      "Beginning Time Step 15\n",
+      "Beginning Time Step 16\n",
+      "Beginning Time Step 17\n",
+      "Beginning Time Step 18\n",
+      "Beginning Time Step 19\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'is_alive'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-bf40240106ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Call sim.run() below!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-9-df96d2219b09>\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Beginning Time Step {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_time_step\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;31m# Call our `_time_step()` function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_time_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Simulation is over--log results to a file by calling _log_time_step_statistics(write_to_file=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-7-ea9e906289e9>\u001b[0m in \u001b[0;36m_time_step\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mperson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_alive\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mperson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_infected\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;31m# Call self.infected_interaction() and pass in this infected person\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfected_interaction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m# Once we've made it through the entire population, call self._resolve_states()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-4-6e502715602a>\u001b[0m in \u001b[0;36minfected_interaction\u001b[1;34m(self, infected_person)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;31m# and the counter doesn't increment, repeating the loop and selecting a new person at random.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;31m# check if the person is alive.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mrandom_person\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_alive\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m             \u001b[1;31m# CASE: Random person is not vaccinated, and has not been infected before, making them vulnerable to infection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mrandom_person\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_vaccinated\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mhas_been_infected\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'is_alive'"
      ]
     }
    ],
@@ -611,9 +616,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Alive</th>\n",
+       "      <th>Currently Infected</th>\n",
+       "      <th>Dead</th>\n",
+       "      <th>Time Step</th>\n",
+       "      <th>Total Infected So Far</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0   Alive  Currently Infected  Dead  Time Step  \\\n",
+       "0            0  1974.0                 0.0  26.0        0.0   \n",
+       "1            1  1974.0                 0.0  26.0        1.0   \n",
+       "2            2  1974.0                 0.0  26.0        2.0   \n",
+       "3            3  1974.0                 0.0  26.0        3.0   \n",
+       "4            4  1974.0                 0.0  26.0        4.0   \n",
+       "5            5  1974.0                 0.0  26.0        5.0   \n",
+       "6            6  1974.0                 0.0  26.0        6.0   \n",
+       "7            7  1974.0                 0.0  26.0        7.0   \n",
+       "8            8  1974.0                 0.0  26.0        8.0   \n",
+       "9            9  1974.0                 0.0  26.0        9.0   \n",
+       "10          10  1974.0                 0.0  26.0       10.0   \n",
+       "11          11  1974.0                 0.0  26.0       11.0   \n",
+       "12          12  1974.0                 0.0  26.0       12.0   \n",
+       "13          13  1974.0                 0.0  26.0       13.0   \n",
+       "14          14  1974.0                 0.0  26.0       14.0   \n",
+       "15          15  1974.0                 0.0  26.0       15.0   \n",
+       "16          16  1974.0                 0.0  26.0       16.0   \n",
+       "17          17  1974.0                 0.0  26.0       17.0   \n",
+       "18          18  1974.0                 0.0  26.0       18.0   \n",
+       "19          19  1974.0                 0.0  26.0       19.0   \n",
+       "20          20  1974.0                 0.0  26.0       20.0   \n",
+       "\n",
+       "    Total Infected So Far  \n",
+       "0                    50.0  \n",
+       "1                    50.0  \n",
+       "2                    50.0  \n",
+       "3                    50.0  \n",
+       "4                    50.0  \n",
+       "5                    50.0  \n",
+       "6                    50.0  \n",
+       "7                    50.0  \n",
+       "8                    50.0  \n",
+       "9                    50.0  \n",
+       "10                   50.0  \n",
+       "11                   50.0  \n",
+       "12                   50.0  \n",
+       "13                   50.0  \n",
+       "14                   50.0  \n",
+       "15                   50.0  \n",
+       "16                   50.0  \n",
+       "17                   50.0  \n",
+       "18                   50.0  \n",
+       "19                   50.0  \n",
+       "20                   50.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = pd.read_csv('simulation.csv')\n",
     "results"
